--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,13 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^7.4|^8.0",
+        "laravel-json-api/core": "^1.0.0-beta.1",
+        "laravel-json-api/eloquent": "^1.0.0-beta.1",
+        "vinkla/hashids": "^9.1"
     },
     "require-dev": {
+        "orchestra/testbench": "^6.14",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
