--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel-json-api/core": "^1.0.0-beta.1",
-        "laravel-json-api/eloquent": "^1.0.0-beta.2",
+        "laravel-json-api/core": "^1.0.0",
+        "laravel-json-api/eloquent": "^1.0.0",
         "vinkla/hashids": "^9.1"
     },
     "require-dev": {
@@ -47,7 +47,7 @@
             "dev-develop": "1.x-dev"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
         "sort-packages": true
