--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel-json-api/core": "^1.0",
+        "laravel-json-api/core": "^1.0|^2.0",
         "laravel-json-api/eloquent": "^1.0.1|^2.0",
         "vinkla/hashids": "^9.1"
     },
@@ -48,7 +48,7 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "config": {
         "sort-packages": true
     }
